--- a/src/components/style/ImageViewer.module.css
+++ b/src/components/style/ImageViewer.module.css
@@ -1,12 +1,12 @@
 .container {
   margin-top: 20px;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  justify-content: center;
+  gap: 30px;
 }
 
 .buttonContainer {
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
+  gap: 5px;
 }
