--- a/src/components/style/DrawingCanvas.module.css
+++ b/src/components/style/DrawingCanvas.module.css
@@ -5,6 +5,14 @@
   padding: 20px;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+}
+
+.canvas {
+  width: 100%;
+  height: auto;
+  max-width: 90vw;
+  max-height: 80vh;
 }
 
 .canvas:hover {
