--- a/src/components/style/DrawingCanvas.module.css
+++ b/src/components/style/DrawingCanvas.module.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   padding: 20px;
   width: 100%;
@@ -13,8 +13,14 @@
   height: auto;
   max-width: 90vw;
   max-height: 80vh;
+  margin-bottom: 21%;
 }
 
 .canvas:hover {
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
+}
+@media (max-width: 600px) {
+  .cube {
+    display: none;
+  }
 }
